pokemon type images

--- a/src/scss/components/_pokemon_card_grid.scss
+++ b/src/scss/components/_pokemon_card_grid.scss
@@ -28,6 +28,26 @@
             &-image{
                 height: 10rem;
             }
+            &-types{
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+                gap: 1rem;
+                &-type{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 0.5rem;
+                    gap:0.4rem;
+                    &-image{
+                        height: 2rem;
+                    }
+                    &-text{
+                        font-size: smaller;
+                    }
+                }
+            }
         }
     }
 }
