--- a/src/scss/components/_compare_container.scss
+++ b/src/scss/components/_compare_container.scss
@@ -15,8 +15,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      background-color: var(--accent-color);
-      border: none;
+      border: 1px solid var(--accent-color);
       svg {
         font-size: 5rem;
         color: whitesmoke;
