pokemon infinite loading page bug fixedgit add .

--- a/src/scss/components/_pokemon_container.scss
+++ b/src/scss/components/_pokemon_container.scss
@@ -26,5 +26,16 @@
         height: 17rem;
       }
     }
+    .lines{
+        display: flex;
+        gap: 3rem;
+        position: absolute;
+        .line{
+            height: 28rem;
+            width: 0.3rem;
+            background-color: var(--accent-color);
+            transform: rotate(45deg);
+        }
+    }
   }
 }
