nav bar css fixes

--- a/src/scss/base/_app.scss
+++ b/src/scss/base/_app.scss
@@ -23,6 +23,9 @@
     border-top: none;
     border-bottom: none;
     height: 80vh;
+    background-color: rgba(219, 219, 219, 0.050);
+    overflow: hidden;
+    position: relative;
   }
 }
 
