--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -32,12 +32,7 @@
     font-weight: 700;
     letter-spacing: 0.1rem;
   }
-  background: linear-gradient(
-        $bg-color ($dot-space - $dot-size),
-        transparent 1%
-      )
-      center,
-    $dot-color;
+  background-color: rgba(255, 255, 255, 0.125);
 }
 
 .stats {
@@ -127,10 +122,5 @@
       background-color: var(--accent-color);
     }
   }
-  background: linear-gradient(
-        $bg-color ($dot-space - $dot-size),
-        transparent 1%
-      )
-      center,
-    $dot-color;
+  background-color: rgba(255, 255, 255, 0.125);
 }
