--- a/src/scss/sections/_navbar.scss
+++ b/src/scss/sections/_navbar.scss
@@ -13,7 +13,7 @@ nav {
       justify-content: space-evenly;
       gap: 2rem;
       display: grid;
-      grid-template-columns: repeat(4, 25%);
+      grid-template-columns: repeat(4, 1fr);
       height: 100%;
       list-style-type: none;
       z-index: 1;
@@ -76,7 +76,7 @@ nav {
   bottom: 0;
   left: 0;
   height: var(--underline-height);
-  width: 20%;
+  width: 25%;
   background-color: var(--accent-color);
   pointer-events: none;
   transition: transform var(--transition-duration) ease-in-out;
