--- a/src/scss/components/_compare_container.scss
+++ b/src/scss/components/_compare_container.scss
@@ -15,7 +15,8 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      border: 1px solid var(--accent-color);
+      background-color: var(--accent-color);
+      border: none;
       svg {
         font-size: 5rem;
         color: whitesmoke;
